@@ -46,10 +46,14 @@ import org.apache.ignite.internal.util.typedef.F;
 import org.apache.ignite.internal.util.typedef.internal.U;
 import org.apache.ignite.lang.IgniteBiTuple;
 import org.apache.ignite.testframework.junits.common.GridCommonAbstractTest;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
 /**
  * Test of integration with Hadoop client via command line interface.
  */
+@RunWith(JUnit4.class)
 public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /** IGFS instance. */
     private IgfsEx igfs;
@@ -250,11 +254,33 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
         res.environment().put("HADOOP_HOME", hadoopHome);
         res.environment().put("HADOOP_CLASSPATH", ggClsPath);
         res.environment().put("HADOOP_CONF_DIR", testWorkDir.getAbsolutePath());
+        res.environment().put("HADOOP_OPTS", filteredJvmArgs());
 
         res.redirectErrorStream(true);
 
         return res;
     }
+
+    /**
+     * Creates list of JVM arguments to be used to start hadoop process.
+     *
+     * @return JVM arguments.
+     */
+    private String filteredJvmArgs() {
+        StringBuilder filteredJvmArgs = new StringBuilder();
+
+        filteredJvmArgs.append("-ea");
+
+        for (String arg : U.jvmArgs()) {
+            if (arg.startsWith("--add-opens") || arg.startsWith("--add-exports") || arg.startsWith("--add-modules") ||
+                arg.startsWith("--patch-module") || arg.startsWith("--add-reads") ||
+                arg.startsWith("-XX:+IgnoreUnrecognizedVMOptions"))
+                filteredJvmArgs.append(' ').append(arg);
+        }
+
+        return filteredJvmArgs.toString();
+    }
+
 
     /**
      * Waits for process exit and prints the its output.
@@ -332,6 +358,7 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /**
      * Tests Hadoop command line integration.
      */
+    @Test
     public void testHadoopCommandLine() throws Exception {
         assertEquals(0, executeHadoopCmd("fs", "-ls", "/"));
 
@@ -408,6 +435,7 @@ public class HadoopCommandLineTest extends GridCommonAbstractTest {
     /**
      * Tests Hive integration.
      */
+    @Test
     public void testHiveCommandLine() throws Exception {
         assertEquals(0, executeHiveQuery(
             "create table table_a (" +
